--- a/about/index.html
+++ b/about/index.html
@@ -184,7 +184,7 @@
                 <span class="flag"></span>
                 <span class="time-wrapper"><span class="time">2004/06 ~ Now</span></span>
               </div>
-              <div class="desc"><h5>資深軟體工程師</h5>任職於：新普科技股份有限公司<br/>地點：新竹湖口</div>
+              <div class="desc"><h5>主任</h5>任職於：新普科技股份有限公司<br/>地點：新竹湖口</div>
             </div>
           </li>
           
